# aeronotch

./: .gitignore  .mcp.json  CLAUDE.md  CROSS_PLATFORM_PLAN.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  registry.json  skills-lock.json  vite.config.ts
.claude/: CLAUDE.md
.github/workflows/: release-plugins.yml  release.yml
plugins/github-plugin/: build.mjs  compact.js  dev.mjs  expanded.js  index.js  manifest.json  package-lock.json  package.json  settings.js  tsconfig.json
scripts/: auto-release-plugins.mjs  bump-version.js  generate-changelog.js  install-plugin.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  error.rs  google_calendar.rs  island_hit_test.rs  lib.rs  main.rs  media.rs  mic.rs  system_info.rs  weather.rs  wmi_metrics.rs
src-tauri/src/commands/: calendar.rs  files.rs  media.rs  mic.rs  mod.rs  plugins.rs  plugins_secure.rs  settings.rs  system.rs  weather.rs  window.rs
src-tauri/src/google_calendar/: mod.rs  parser.rs  rrule.rs
src/hooks/: useAutostart.ts  useGoogleCalendar.ts  useIslandExpansion.ts  useIslandWindow.ts  useMediaInfo.ts  useMicStatus.ts  useMonitors.ts  useSettingsEmit.ts  useSystemInfo.ts  useTabFallback.ts  useTranslation.ts  useWeatherInfo.ts
src/i18n/: translations.ts
src/lib/: animation-config.ts  plugin-commands.ts  plugin-secure-commands.ts  tauri-commands.ts  windowLabel.ts
src/plugins/: PluginCompactSlot.tsx  PluginExpandedPanel.tsx  plugin-manager.ts  sdk.ts  (+3 more)
(+50 files in other folders)
