[package]
name = "aeronotch"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aeronotch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["time", "sync", "net", "io-util", "rt"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
base64 = "0.22"
windows = { version = "0.58.0", features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_UI_Shell",
    "Win32_System_SystemServices",
] }
chrono = "0.4.45"
urlencoding = "2.1.3"
clipboard-win = "5.4.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"

